--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <header><h1>The Poor Woman's Reddit</h1></header>
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="script.js"></script>
+<script src="plugin.js" type = "text/javascript"></script>
+<script src="script.js" type = "text/javascript"></script>
 </body>
 </html>
